# zen

./: LICENSE  README.md  __init__.py  pyproject.toml
.github/workflows/: ci.yml
src/: __init__.py  main.py
src/zen/: __init__.py  timer.py
